// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`keyrack.source SDK is-optional-if-has given: [case1] absent key with alternative present when: [t0] keyrack.source() strict mode with alternative present then: stderr matches snapshot 1`] = `""`;

exports[`keyrack.source SDK is-optional-if-has given: [case1] absent key with alternative present when: [t0] keyrack.source() strict mode with alternative present then: stdout matches snapshot 1`] = `
"strict mode passed with alternative present
alternative value: alternative-secret-value
"
`;

exports[`keyrack.source SDK is-optional-if-has given: [case1] absent key with alternative present when: [t1] keyrack.source() strict mode without alternative then: stderr matches snapshot 1`] = `
"
🔐 keyrack
   ├─ testorg.test.__TEST_SDK_OPT_PRIMARY__
   │  ├─ status: absent 🫧
   │  └─ [2mtip: rhx keyrack set --owner testorg --key __TEST_SDK_OPT_PRIMARY__ --env test[0m
   └─ testorg.test.__TEST_SDK_OPT_ALTERNATIVE__
      ├─ status: absent 🫧
      └─ [2mtip: rhx keyrack set --owner testorg --key __TEST_SDK_OPT_ALTERNATIVE__ --env test[0m

✋ some keys were not granted, yet are strictly required
   └─ ask a human to set the keys, then try again

hint: use mode: 'lenient' if partial results are acceptable
"
`;

exports[`keyrack.source SDK is-optional-if-has given: [case1] absent key with alternative present when: [t1] keyrack.source() strict mode without alternative then: stdout matches snapshot 1`] = `
"
🔐 keyrack
   ├─ testorg.test.__TEST_SDK_OPT_PRIMARY__
   │  ├─ status: absent 🫧
   │  └─ [2mtip: rhx keyrack set --owner testorg --key __TEST_SDK_OPT_PRIMARY__ --env test[0m
   └─ testorg.test.__TEST_SDK_OPT_ALTERNATIVE__
      ├─ status: absent 🫧
      └─ [2mtip: rhx keyrack set --owner testorg --key __TEST_SDK_OPT_ALTERNATIVE__ --env test[0m

✋ some keys were not granted, yet are strictly required
   └─ ask a human to set the keys, then try again

hint: use mode: 'lenient' if partial results are acceptable
"
`;

exports[`keyrack.source SDK is-optional-if-has given: [case2] both keys present when: [t0] keyrack.source() with both keys present then: stderr matches snapshot 1`] = `""`;

exports[`keyrack.source SDK is-optional-if-has given: [case2] both keys present when: [t0] keyrack.source() with both keys present then: stdout matches snapshot 1`] = `
"primary value: primary-value
alternative value: alternative-value
"
`;

exports[`keyrack.source SDK is-optional-if-has given: [case3] alternative key with empty string value when: [t0] keyrack.source() with empty alternative then: stderr matches snapshot 1`] = `
"
🔐 keyrack
   ├─ testorg.test.__TEST_SDK_OPT_EMPTY_PRIMARY__
   │  ├─ status: absent 🫧
   │  └─ [2mtip: rhx keyrack set --owner testorg --key __TEST_SDK_OPT_EMPTY_PRIMARY__ --env test[0m
   └─ testorg.test.__TEST_SDK_OPT_EMPTY_ALT__
      ├─ status: blocked 🚫
      │  └─ no value to validate
      └─ [2mtip: --allow-dangerous if you must[0m

✋ some keys were not granted, yet are strictly required
   └─ ask a human to set the keys, then try again

hint: use mode: 'lenient' if partial results are acceptable
"
`;

exports[`keyrack.source SDK is-optional-if-has given: [case4] key with is-optional-if-has AND grade when: [t0] keyrack.source() with graded key and alternative present then: stderr matches snapshot 1`] = `""`;

exports[`keyrack.source SDK is-optional-if-has given: [case4] key with is-optional-if-has AND grade when: [t0] keyrack.source() with graded key and alternative present then: stdout matches snapshot 1`] = `
"graded key waived
alternative value: alternative-graded-value
"
`;

exports[`keyrack.source SDK is-optional-if-has given: [case5] alternative key NOT in manifest but present in env when: [t0] keyrack.source() with alternative in env but not in manifest then: stderr matches snapshot 1`] = `""`;

exports[`keyrack.source SDK is-optional-if-has given: [case5] alternative key NOT in manifest but present in env when: [t0] keyrack.source() with alternative in env but not in manifest then: stdout matches snapshot 1`] = `
"waiver checks env, not manifest
"
`;

exports[`keyrack.source SDK is-optional-if-has given: [case5] alternative key NOT in manifest but present in env when: [t1] keyrack.source() without alternative in env then: stderr matches snapshot 1`] = `
"
🔐 keyrack
   └─ testorg.test.__TEST_SDK_OPT_ENV_ONLY_PRIMARY__
      ├─ status: absent 🫧
      └─ [2mtip: rhx keyrack set --owner testorg --key __TEST_SDK_OPT_ENV_ONLY_PRIMARY__ --env test[0m

✋ some keys were not granted, yet are strictly required
   └─ ask a human to set the keys, then try again

hint: use mode: 'lenient' if partial results are acceptable
"
`;

exports[`keyrack.source SDK is-optional-if-has given: [case6] primary key directly supplied (happy path) when: [t0] keyrack.source() with primary key supplied then: stderr matches snapshot 1`] = `""`;

exports[`keyrack.source SDK is-optional-if-has given: [case6] primary key directly supplied (happy path) when: [t0] keyrack.source() with primary key supplied then: stdout matches snapshot 1`] = `
"primary directly supplied
primary value: direct-primary-value
"
`;
